feat(StreamStudy): sumOverThreeAndDouble, printLongestWordTop100 기능 구현